--- a/index.html
+++ b/index.html
@@ -11,16 +11,20 @@
             <nav id="head-nav">
                 <h3 id="head-title">Shawarma</h3>
 
-                <a href="#" class="head-link">Account</a>
-                <a href="#" class="head-link">Shop</a>
-                <a href="#" class="head-link">About Us</a>
+                <div id="links-container">
+                    <a href="#" class="head-link">Account</a>
+                    <a href="#" class="head-link">Shop</a>
+                    <a href="#" class="head-link">About Us</a>
+                </div>
             </nav>
 
             <div id="head-description">
                 <div id="description-content">
-                    <h1>Shawarma is super delicious and awesome!</h1>
-                    <p>Is made of spit-roasted layers of lamb, beef, or other meat that are sliced and often wrapped in or served with pita.</p>
-                    <button class="sign-up-button">Sign u p</button>
+                    <div id="text-container">
+                        <h3>Shawarma is super delicious and awesome!</h3>
+                        <p>Is made of spit-roasted layers of lamb, beef, or other meat that are sliced and often wrapped in or served with pita.</p>
+                    </div>
+                    <button class="sign-up-button">Sign up</button>
                 </div>
 
                 <img src="./img/shawarma.jpg" alt="Shawarma" id="description-img">
@@ -29,7 +33,7 @@
 
         <main>
             <div class="information-section">
-                <h1>Examples of shawarma</h1>
+                <h1>Examples of Shawarmas</h1>
 
                 <div id="infomation-containers">
                     <div class="information-container">
