Edit the main content style
I styled the main content

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="information-section">
                 <h1>Examples of Shawarmas</h1>
 
-                <div id="infomation-containers">
+                <div id="information-containers">
                     <div class="information-container">
                         <img src="./img/shawarma_chicken.jpg" alt="Shawarma Chicken">
                         <p>Chicken Shawarma</p>
@@ -50,19 +50,21 @@
                     </div>
                     <div class="information-container">
                         <img src="./img/shawarma_mix.jpg" alt="Shawarma Mix">
-                        <p>Mix of Meat (Chicken, Beef and Lamb) Shawarma</p>
+                        <p>Mix Shawarma</p>
                     </div>
                 </div>
             </div>
 
             <div id="quote">
-                <h3 id="qute-text">"If there is a hole, there is a goal."</h3>
-                <p id="quote-author">-Master Oogway</p>
+                <div id="quote-container">
+                    <h3 id="qute-text">"If there is a hole, there is a goal."</h3>
+                    <p id="quote-author">-Master Oogway</p>
+                </div>
             </div>
 
             <div id="sign-up-section">
                 <div class="sign-up-text">
-                    <h3>Come and eat a shawarma! It's time!</h3>
+                    <h4>Come and eat a shawarma! It's time!</h3>
                     <p>Sign up so you can taste a shawarma by clicking that button over there.</p>
                 </div>
 
